<resources><!--Main Activity--><string name="app_name">Voicive</string><string name="txv_plus_twelve_text">+12</string><string name="txv_minus_twelve_text">-12</string><string name="txv_pitch_empty">C4</string><string name="txv_transpose_default">Transpose</string><string name="txv_device">DEVICE</string><string name="txv_channel">CHANNEL</string><string name="txv_nomidi">
    NO MIDI CONNECTION FOUND\n
    Connect your mobile device to your Midi-Equipment while making sure <a href="https://www.google.com/search?q=android+set+usb+mode+to+midi"> USB-Mode is set to Midi</a>, give up and scrap your mobile device or just use the app anyways
  </string><!-- Old Text: <string name="txv_nomidi">NO MIDI CONNECTION FOUND\n
    Please start another Midi App or wire your phone to another device and make sure USB-Mode is <a href = "https://www.google.com/search?q=android+set+usb+mode+to+midi">set to Midi</a>
  </string>--><string name="snb_calibration">Let\'s calibrate to your voice!</string><string name="snb_calibration_btn">Calibrate</string><string name="swt_vocalmode">Singing mode</string><string name="transposition">Transposition: </string><!--Settings Activity--><string name="settings_title">Settings</string><string name="btn_calibrate">Calibrate</string><string name="txv_loudness">Loudness threshold</string><string name="txv_lowcut">Low cut frequency</string><string name="txv_base_f">Base frequency</string><string name="txv_scale">Rounding scale (major)</string><string name="txv_copyright_version">Created with ❤ by Martin Reinmann in 2021</string><string name="txv_glide">Pitch-glide range</string><string name="txv_settings_calibration">Low cut, loudness and vowel-detection calibration</string><string name="sp_scale_none">No scale</string><string name="txv_vowel">Vowel-Differentiation-Peaks</string><string name="unit_percent">%</string><string name="unit_frequency">Hz</string><string name="unit_notes">Cent</string><string name="unit_peaks">Peaks</string><!--Calibration Activity--><string name="calibration_title">Calibration</string><string name="txv_calibration_title_silent">Calibration</string><string name="txv_calibration_text_silent">Nothing to do yet, please just stay silent after pressing \'Start\' until receiving further instructions</string><string name="btn_calibration_start">Start</string><string name="txv_calibration_title_a">Calibration</string><string name="txv_calibration_text_a">Please sing the vowel \'a\' as low in pitch as you\'ll ever use the app after pressing \'Continue\' until receiving further instructions</string><string name="btn_calibration_continue">Continue</string><string name="txv_calibration_title_n">Almost there...</string><string name="txv_calibration_text_n">Now please sing please the vowel \'n\' as low in pitch as the \'a\' after pressing \'Continue\' </string><string name="txv_calibration_title_success">That\'s it!</string><string name="txv_calibration_text_success">Yeah, you did it, the Calibration has finished successfully, let\'s go singin\'!</string><string name="btn_calibration_end_success">Exit</string><string name="txv_calibration_title_fail">Oops! Too quiet</string><string name="txv_calibration_text_fail">Calibration failed: Please sing louder so it get\'s a bit more distinguishable</string><string name="btn_calibration_end_fail">Got it, I\'ll try again</string></resources>