<android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".SettingsActivity" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"><android.widget.Toolbar android:id="@+id/settings_toolbar" android:layout_width="0dp" android:layout_height="wrap_content" android:background="?attr/colorPrimary" android:minHeight="?attr/actionBarSize" android:theme="?attr/actionBarTheme" android:title="@string/settings_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" /><ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:scrollbarStyle="insideInset" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/settings_toolbar"><android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:id="@+id/txv__settings_calibration" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginEnd="16dp" android:textColor="@color/text" android:text="@string/txv_settings_calibration" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" /><Button android:id="@+id/btn_calibrate" android:layout_width="0dp" android:layout_height="48dp" android:text="@string/btn_calibrate" app:layout_constraintEnd_toEndOf="@+id/txv__settings_calibration" app:layout_constraintStart_toStartOf="@+id/txv__settings_calibration" app:layout_constraintTop_toBottomOf="@+id/txv__settings_calibration" /><TextView android:id="@+id/txv_loudness" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/txv_loudness" android:textColor="@color/text" app:layout_constraintEnd_toStartOf="@+id/txv_lowcut_out" app:layout_constraintStart_toStartOf="@+id/btn_calibrate" app:layout_constraintTop_toBottomOf="@+id/btn_calibrate" /><TextView android:id="@+id/txv_loudness_out" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:textAlignment="textEnd" android:textColor="@color/text" app:layout_constraintBottom_toBottomOf="@+id/txv_loudness" app:layout_constraintEnd_toEndOf="@+id/btn_calibrate" app:layout_constraintTop_toTopOf="@+id/txv_loudness" app:layout_constraintVertical_bias="1.0" /><SeekBar android:id="@+id/skb_loudness" style="@style/Widget.AppCompat.SeekBar" android:layout_width="0dp" android:layout_height="48dp" android:max="200" android:min="10" android:progress="100" app:layout_constraintEnd_toEndOf="@+id/txv_loudness_out" app:layout_constraintStart_toStartOf="@+id/txv_loudness" app:layout_constraintTop_toBottomOf="@+id/txv_loudness" /><TextView android:id="@+id/txv_lowcut" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:text="@string/txv_lowcut" android:textColor="@color/text" app:layout_constraintEnd_toEndOf="@+id/skb_loudness" app:layout_constraintStart_toStartOf="@+id/skb_loudness" app:layout_constraintTop_toBottomOf="@+id/skb_loudness" /><TextView android:id="@+id/txv_lowcut_out" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:textAlignment="textEnd" android:textColor="@color/text" app:layout_constraintBottom_toBottomOf="@+id/txv_lowcut" app:layout_constraintEnd_toEndOf="@+id/btn_calibrate" app:layout_constraintTop_toTopOf="@+id/txv_lowcut" /><SeekBar android:id="@+id/skb_lowcut" style="@style/Widget.AppCompat.SeekBar" android:layout_width="0dp" android:layout_height="48dp" android:max="150" android:min="50" android:progress="70" app:layout_constraintEnd_toEndOf="@+id/txv_lowcut" app:layout_constraintStart_toStartOf="@+id/txv_loudness" app:layout_constraintTop_toBottomOf="@+id/txv_lowcut" /><TextView android:id="@+id/txv_base_f" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/txv_base_f" android:textColor="@color/text" app:layout_constraintEnd_toEndOf="@+id/skb_loudness" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@+id/skb_loudness" app:layout_constraintTop_toBottomOf="@+id/skb_lowcut" /><TextView android:id="@+id/txv_base_f_out" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:textAlignment="textEnd" android:textColor="@color/text" app:layout_constraintBottom_toTopOf="@+id/skb_base_f" app:layout_constraintEnd_toEndOf="@+id/btn_calibrate" app:layout_constraintTop_toTopOf="@+id/txv_base_f" /><SeekBar android:id="@+id/skb_base_f" style="@style/Widget.AppCompat.SeekBar" android:layout_width="0dp" android:layout_height="48dp" android:max="460" android:min="420" android:progress="440" app:layout_constraintEnd_toEndOf="@+id/txv_base_f" app:layout_constraintStart_toStartOf="@+id/txv_loudness" app:layout_constraintTop_toBottomOf="@+id/txv_base_f" /><TextView android:id="@+id/txv_glide" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/txv_glide" android:textColor="@color/text" app:layout_constraintEnd_toEndOf="@+id/skb_loudness" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@+id/skb_loudness" app:layout_constraintTop_toBottomOf="@+id/skb_base_f" /><TextView android:id="@+id/txv_glide_out" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:textAlignment="textEnd" android:textColor="@color/text" app:layout_constraintBottom_toTopOf="@+id/skb_glide" app:layout_constraintEnd_toEndOf="@+id/btn_calibrate" app:layout_constraintTop_toTopOf="@+id/txv_glide" app:layout_constraintVertical_bias="1.0" /><SeekBar android:id="@+id/skb_glide" style="@style/Widget.AppCompat.SeekBar" android:layout_width="0dp" android:layout_height="48dp" android:max="200" android:min="50" android:progress="50" app:layout_constraintEnd_toEndOf="@+id/txv_base_f" app:layout_constraintStart_toStartOf="@+id/txv_loudness" app:layout_constraintTop_toBottomOf="@+id/txv_glide" /><TextView android:id="@+id/txv_vowel" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/txv_vowel" android:textColor="@color/text" app:layout_constraintEnd_toEndOf="@+id/skb_loudness" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@+id/skb_loudness" app:layout_constraintTop_toBottomOf="@+id/skb_glide" /><TextView android:id="@+id/txv_vowel_out" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:textAlignment="textEnd" android:textColor="@color/text" app:layout_constraintBottom_toTopOf="@+id/skb_vowel" app:layout_constraintEnd_toEndOf="@+id/btn_calibrate" app:layout_constraintTop_toTopOf="@+id/txv_vowel" app:layout_constraintVertical_bias="1.0" /><SeekBar android:id="@+id/skb_vowel" style="@style/Widget.AppCompat.SeekBar" android:layout_width="0dp" android:layout_height="48dp" android:max="25" android:min="2" android:progress="5" app:layout_constraintEnd_toEndOf="@+id/txv_base_f" app:layout_constraintStart_toStartOf="@+id/txv_loudness" app:layout_constraintTop_toBottomOf="@+id/txv_vowel" /><TextView android:id="@+id/txv_scale" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginEnd="16dp" android:text="@string/txv_scale" android:textColor="@color/text" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/skb_vowel" /><Spinner android:id="@+id/sp_scale" android:layout_width="0dp" android:layout_height="48dp" android:layout_marginBottom="16dp" android:textColor="@color/text" app:layout_constraintBottom_toTopOf="@+id/txv_copyright" app:layout_constraintEnd_toEndOf="@+id/txv_scale" app:layout_constraintStart_toStartOf="@+id/txv_scale" app:layout_constraintTop_toBottomOf="@+id/txv_scale" /><TextView android:id="@+id/txv_copyright" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp" android:text="@string/txv_copyright_version" android:textColor="@color/text" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" /></android.support.constraint.ConstraintLayout></ScrollView></android.support.constraint.ConstraintLayout>