<android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/cns_main" tools:context=".MainActivity" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"><ProgressBar android:id="@+id/prb_offset_r" style="?android:attr/progressBarStyleHorizontal" android:layout_width="0dp" android:layout_height="48dp" android:layout_marginTop="16dp" android:layout_marginEnd="16dp" android:max="50" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/divider" app:layout_constraintTop_toTopOf="parent" /><View android:id="@+id/divider" android:layout_width="4dp" android:layout_height="48dp" android:background="?android:attr/listDivider" app:layout_constraintBottom_toBottomOf="@+id/prb_offset_r" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/prb_offset_r" app:layout_constraintVertical_bias="0.0" /><TextView android:id="@+id/txv_pitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txv_pitch_empty" android:textAlignment="center" android:textColor="@color/text" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/divider" /><ProgressBar android:id="@+id/prb_offset_l" style="?android:attr/progressBarStyleHorizontal" android:layout_width="0dp" android:layout_height="48dp" android:layout_marginStart="16dp" android:rotationY="180" android:max="50" app:layout_constraintBottom_toBottomOf="@+id/prb_offset_r" app:layout_constraintEnd_toStartOf="@+id/divider" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/prb_offset_r" /><TextView android:id="@+id/txv_plustwelve" android:layout_width="112dp" android:layout_height="16dp" android:layout_marginEnd="16dp" android:text="@string/txv_plus_twelve_text" android:textAlignment="textEnd" android:textColor="@color/text" app:layout_constraintEnd_toEndOf="@+id/skb_transpose" app:layout_constraintTop_toBottomOf="@+id/skb_transpose" /><TextView android:id="@+id/txv_minustwelve" android:layout_width="112dp" android:layout_height="16dp" android:layout_marginStart="16dp" android:text="@string/txv_minus_twelve_text" android:textColor="@color/text" app:layout_constraintStart_toStartOf="@+id/skb_transpose" app:layout_constraintTop_toBottomOf="@+id/skb_transpose" /><TextView android:id="@+id/txv_transpose" android:layout_width="112dp" android:layout_height="16dp" android:text="@string/txv_transpose_default" android:textAlignment="center" android:textColor="@color/text" app:layout_constraintEnd_toStartOf="@+id/txv_plustwelve" app:layout_constraintStart_toEndOf="@+id/txv_minustwelve" app:layout_constraintTop_toBottomOf="@+id/skb_transpose" /><SeekBar android:id="@+id/skb_transpose" style="@style/Widget.AppCompat.SeekBar.Discrete" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="0dp" android:max="12" android:min="-12" android:progress="0" android:progressTint="#00000000" app:layout_constraintEnd_toEndOf="@+id/prb_offset_r" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@+id/prb_offset_l" app:layout_constraintTop_toBottomOf="@+id/txv_pitch" /><ImageButton android:id="@+id/btn_start" android:layout_width="192dp" android:layout_height="192dp" android:background="@drawable/round_button_start" android:elevation="4dp" android:foregroundGravity="fill_vertical" android:padding="32dp" android:scaleType="fitCenter" android:src="@drawable/ic_baseline_mic_24" app:layout_constraintBottom_toTopOf="@+id/txv_nomidi" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/skb_transpose" /><ImageButton android:id="@+id/btn_stop" android:layout_width="192dp" android:layout_height="192dp" android:background="@drawable/round_button_stop" android:elevation="4dp" android:foregroundGravity="fill_vertical" android:padding="32dp" android:scaleType="fitCenter" android:src="@drawable/ic_baseline_mic_off_24" android:visibility="invisible" app:layout_constraintBottom_toTopOf="@+id/txv_nomidi" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/skb_transpose" /><ImageView android:id="@+id/imv_level_circle" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp" android:layout_marginEnd="16dp" android:layout_marginBottom="8dp" android:alpha="1" android:src="@drawable/ic_glowcircle" app:layout_constraintBottom_toTopOf="@+id/txv_nomidi" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txv_transpose" /><Switch android:id="@+id/swt_vocalmode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16dp" android:layout_marginTop="16dp" android:checked="true" android:text="@string/swt_vocalmode" android:textColor="@color/text" app:layout_constraintBottom_toTopOf="@+id/txv_nomidi" app:layout_constraintEnd_toEndOf="@+id/btn_start" app:layout_constraintStart_toStartOf="@+id/btn_start" app:layout_constraintTop_toBottomOf="@+id/btn_start" /><TextView android:id="@+id/txv_nomidi" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp" android:focusable="true" android:text="@string/txv_nomidi" android:textAlignment="center" android:textColor="@color/paleRed" android:visibility="invisible" android:elevation="4dp" app:layout_constraintBottom_toTopOf="@+id/col_main" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" tools:visibility="visible" /><TextView android:id="@+id/txv_channel_title" android:layout_width="112dp" android:layout_height="16dp" android:layout_marginStart="16dp" android:text="@string/txv_channel" android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="@color/text" app:layout_constraintBottom_toTopOf="@+id/sp_device" app:layout_constraintStart_toStartOf="@+id/skb_transpose" /><Spinner android:id="@+id/sp_channel" android:layout_width="0dp" android:layout_height="32dp" android:layout_marginStart="16dp" android:layout_marginBottom="16dp" android:padding="0dp" android:textAlignment="viewStart" android:textColor="@color/text" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/prb_offset_l" app:layout_constraintStart_toStartOf="@+id/skb_transpose" /><TextView android:id="@+id/txv_device_title" android:layout_width="112dp" android:layout_height="16dp" android:layout_marginEnd="16dp" android:text="@string/txv_device" android:textAlignment="textEnd" android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="@color/text" app:layout_constraintBottom_toTopOf="@+id/sp_device" app:layout_constraintEnd_toEndOf="@+id/skb_transpose" /><Spinner android:id="@+id/sp_device" android:layout_width="0dp" android:layout_height="32dp" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp" android:textAlignment="viewEnd" android:textColor="@color/text" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/skb_transpose" app:layout_constraintStart_toStartOf="@+id/prb_offset_r" /><android.support.design.widget.CoordinatorLayout android:id="@+id/col_main" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:elevation="8dp" app:layout_constraintBottom_toTopOf="@+id/txv_channel_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" /></android.support.constraint.ConstraintLayout>